# NEXUS-HUB_contract

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  package.json
apps/api/: Dockerfile  package.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/auth/dto/: index.ts
apps/api/src/auth/strategies/: jwt.strategy.ts
apps/api/src/auth/types/: auth.types.ts
apps/api/src/balances/: balances.service.ts
apps/api/src/common/decorators/: index.ts
apps/api/src/common/filters/: index.ts
apps/api/src/common/guards/: index.ts
apps/api/src/common/prisma/: prisma.service.ts
apps/api/src/disputes/: disputes.service.ts
apps/api/src/escrow/: escrow.controller.ts  escrow.module.ts  escrow.service.ts
apps/api/src/webhooks/: webhooks.service.ts
apps/web/: .env.example  CLAUDE.md  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/hooks/: use-nexus-queries.ts
apps/web/src/lib/: api-client.ts  schemas.ts  utils.ts
apps/web/src/services/: api.ts
apps/web/src/stores/: auth.store.ts
apps/web/src/types/: index.ts
apps/worker/: package.json
apps/worker/src/: main.ts  worker.module.ts
apps/worker/src/processors/: escrow.processor.ts  webhook.processor.ts
apps/worker/src/stellar/: stellar.service.ts
contracts/: Cargo.toml  Makefile
contracts/nexus-escrow/: Cargo.toml
contracts/nexus-escrow/src/: errors.rs  events.rs  lib.rs  storage.rs  types.rs
contracts/nexus-escrow/tests/: escrow_tests.rs
docs/: AI.md
(+16 files in other folders)
