[package]
name = "nexus-escrow"
version = "1.0.0"
edition = "2021"
authors = ["NEXUS-HUB Team"]
description = "Non-custodial escrow smart contract for NEXUS-HUB on Stellar/Soroban"
license = "MIT"
repository = "https://github.com/your-org/nexus-hub"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
rand = { version = "0.8" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
